--- a/auth/package.json
+++ b/auth/package.json
@@ -10,9 +10,18 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.6",
+    "@types/mongoose": "^5.7.28",
     "@types/typescript": "^2.0.0",
     "express": "^4.17.1",
+    "mongoose": "^5.9.20",
     "ts-node-dev": "^1.0.0-pre.49",
     "typescript": "^3.9.5"
+  },
+  "devDependencies": {
+    "@types/jest": "^26.0.3",
+    "@types/supertest": "^2.0.9",
+    "jest": "^26.1.0",
+    "mongodb-memory-server": "^6.6.1",
+    "supertest": "^4.0.2"
   }
 }
