User created successfully

--- a/auth/package.json
+++ b/auth/package.json
@@ -4,7 +4,14 @@
   "description": "",
   "scripts": {
     "start": "ts-node-dev src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +20,7 @@
     "@types/mongoose": "^5.7.28",
     "@types/typescript": "^2.0.0",
     "express": "^4.17.1",
+    "express-validator": "^6.6.0",
     "mongoose": "^5.9.20",
     "ts-node-dev": "^1.0.0-pre.49",
     "typescript": "^3.9.5"
@@ -22,6 +30,7 @@
     "@types/supertest": "^2.0.9",
     "jest": "^26.1.0",
     "mongodb-memory-server": "^6.6.1",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "ts-jest": "^26.1.1"
   }
 }
